--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
     "serve": "nodemon index.js"
   },
   "dependencies": {
+    "inflection": "^1.12.0",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0",
